syntax = "proto3";

option go_package = "./;helloworld";
option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";
option java_package = "com.helloworld";

package helloworld;

import "google/api/annotations.proto";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/sayHello"
      body: "*"
    };
  };
  
  // Sends multiple greetings
  rpc SayHelloMultiple (HelloMultipleRequest) returns (HelloMultipleReply) {
    option (google.api.http) = {
      post: "/v1/sayHelloMultiple"
      body: "*"
    };
  };

  // Get greeting statistics
  rpc GetGreetingStats (GreetingStatsRequest) returns (GreetingStatsReply) {
    option (google.api.http) = {
      get: "/v1/greetingStats"
    };
  };
}

// The request message containing the user's name
message HelloRequest {
  string name_test = 1;
  string language = 2;  // Optional: language preference
  repeated string tags = 3;  // Optional: tags for the greeting
}

// The response message containing the greetings
message HelloReply {
  string test_message = 1;
  int64 timestamp = 2;  // Unix timestamp
  string language = 3;  // Language used
  repeated string tags = 4;  // Associated tags
}

// Request for multiple greetings
message HelloMultipleRequest {
  repeated string names = 1;
  string common_message = 2;
}

// Response for multiple greetings
message HelloMultipleReply {
  repeated HelloReply greetings = 1;
  int32 total_count = 2;
}

// Stats request
message GreetingStatsRequest {
  string name_filter = 1;  // Optional: filter by name
}

// Stats response
message GreetingStatsReply {
  int32 total_requests = 1;
  int32 unique_names = 2;
  map<string, int32> name_frequency = 3;  // Name frequency map
  int64 last_request_time = 4;
}